deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app-deployment2
spec:
  selector:
    matchLabels:
      app: spring-boot-app2
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-boot-app2
    spec:
      containers:
      - name: spring-boot-app2
        image: openshift/hello-openshift
        ports:
        - containerPort: 8080
