service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service1
spec:
  selector:
    app: spring-boot-app1
  ports:
    - port: 80
      targetPort: 80
