route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-boot-app-route2
spec:
  to:
    kind: Service
    name: spring-boot-app-service2
  port:
    targetPort: 8080
